- Add Singe UOP Extract and Single Art Extract
- Add Pass coordinates
- Created Uo Art Merge class, which is a multifunctional tool for moving Art Mul images, 
  including shifting, saving, same height, showing only differences, free ID choice, mirroring, removing, copying to clipboard, 
  importing from clipboard, saving XML directories, ID deletion, and hex search.

Version : 4.12.1 #XG1
- Implemented copying multiple graphics to the clipboard with Ctrl+X.
- Add Strg+F3 Search.
- Add ParticelGreyHueShadow and ParticelGreyHue CheckBox into TextureCutter.
- Add Items ParticelGrayHueShadow.
- Add Items ParticelGrayHueShadow Colord Dialog.
- Add Checkbox ParticelGrey.
- Add Items Rhombus.
- Add Items Grid Image.
- Add Items Grid Color.
- Add Items Copy Clipboard - DetailPictureBox.
- Light class completely revised.
- Added size to light to scale the size of the light image.
- Add Landtiles Zoom Form.
- Add Texture editor for tiles incorporated into the textures.
- Add Picture Preview
- Add Added color change so you can change the pixel colors.
- Add Mirror, scale textures to 64x64 and 128x128, rotate right left and create textures.
- Add Backgrund Button.
- Add Texture creator.

Version : 4.12.0 #XG1
- Update to net8.
- Add Custom Sound Gumps Button
- Add Alarmclock Snooze Timer 5 min
- Gump - Instant search and focus with ‘Enter
- Gump Pagedown and PageUp
- Add Animation Html
- Add Icons ToolStripComboBox1 Stairs
- Gump ID Calculator and Buttons
- Add Animation Checkbox Free IDs Color Blue

Version : 4.11.26 #XG1
- Add Map Tools
- Added XML debugging hexcode
- Add Create Art and Artidx Mul tool Texture Tiledata
- Load Menu : Saves the last selected profile, reselecting it upon startup
- Search Animation

Version : 4.11.25 #XG1
- New feature added: Names outsourced to Gumps and stored in an XML file, with custom formatting and editing based on ID.
- Search function adjusted to include names as well.
- Added sound button and disabled messages